tests/checker/diagnostics/0224_adt_recursive_list_payload_mismatch_09.ml.infer.expected
File "0224_adt_recursive_list_payload_mismatch_09.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0224_adt_recursive_list_payload_mismatch_09 is not a valid module name.

File "0224_adt_recursive_list_payload_mismatch_09.ml", line 2, characters 37-41:
2 | let _ : int mylist_iota = Cons_iota (true, Nil_iota)
                                         ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
